# PYTDL

./: .gitignore  .markdownlint-cli2.jsonc  .pre-commit-config.yaml  KBgpRAzbiaM.json  PLliBvQE3gg9cQ1T6AdBWsGbCfX7w7RthQ.json  README.md  __init__.py  config.toml  figure-out.txt  hhistory.txt  list.bat  merge_subs.py  music.bat  pyproject.toml  pytdl.py  qqueue.txt  requirements.txt  sub.bat  tw.bat  yt.bat
src/: pytdl.py
temp/: LICENSE  merge_subs.py  pyproject.toml  pytdl.py
