[project]
name = "PYTDL"
description = "Python Youtube Downloader: An interactive command-line tool to batch download with yt-dlp"
version = "2.0.0"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "AlexBlandin" }]
dependencies = [
  "yt-dlp",
  "langcodes",
  "tqdm",
  "pytomlpp",
  "humanize",
  "mutagen",
  "beautifulsoup4",
]

[project.optional-dependencies]
toml = ["pytomlpp"]
cli = ["colorama; platform_system == 'Windows'"]
all = ["toml", "cli"]
lint = ["ruff"]
types = ["mypy"]
dev = ["all", "lint", "types"]

[project.urls]
Documentation = "https://github.com/alexblandin/PYTDL#readme"
Issues = "https://github.com/alexblandin/PYTDL/issues"
Source = "https://github.com/alexblandin/PYTDL"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.envs.default]
dependencies = [
  "yt-dlp",
  "langcodes",
  "tqdm",
  "pytomlpp",
  "humanize",
  "mutagen",
  "beautifulsoup4",
]
features = ["toml", "cli"]

[tool.hatch.envs.lint]
dependencies = ["lint"]
detached = true

[tool.hatch.envs.types]
extra-dependencies = ["mypy>=1.0.0"]

[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {{args:{package_location}{template_config['package_name']} tests}}"

# [tool.hatch.envs.dev]
# features = ["dev"]
# post-install-commands = ["mypy --install-types --non-interactive src/mymodule"]

[tool.ruff]
indent-width = 2
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "G004",   # simple f-string logging is fine
  "ERA",    # code comments actually help
  "TD003",  # not using github to track todo/issues
  "S311",   # I know when to use secrets
  "T20",    # print is good, actually 
  "W191",   # ruff format
  "E111",   # ruff format
  "E114",   # ruff format
  "E117",   # ruff format
  "E203",   # ruff format
  "D206",   # ruff format
  "D212",   # ruff format
  "D300",   # ruff format
  "Q",      # ruff format
  "COM812", # ruff format
  "COM819", # ruff format
  "ISC001", # ruff format
  "ISC002", # ruff format
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
line-ending = "lf"
indent-style = "space"
skip-magic-trailing-comma = false
