[project]
name = "PYTDL"
description = "Python Youtube Downloader: An interactive command-line tool to batch download with yt-dlp"
version = "2.0.0"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "AlexBlandin" }]
dependencies = [
  "yt-dlp[default,curl-cffi]>=2025.08.11",
  "tqdm",
  "attrs",
  "cattrs",
  "ada_url",
  "pytomlpp",
  "humanize",
  "langcodes",
  "beautifulsoup4",
]

[project.optional-dependencies]
dev = ["ruff", "pdbp", "basedmypy", "basedpyright"]

[project.urls]
Documentation = "https://github.com/alexblandin/PYTDL#readme"
Issues = "https://github.com/alexblandin/PYTDL/issues"
Source = "https://github.com/alexblandin/PYTDL"

[tool.ruff]
indent-width = 2
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "G004",   # simple f-string logging is fine
  "ERA",    # code comments actually help
  "TD003",  # not using github to track todo/issues
  "S311",   # I know when to use secrets
  # "T20",    # print is good, actually 
  "D202",   # a little vertical separation can be nice
  "W191",   # ruff format
  "E111",   # ruff format
  "E114",   # ruff format
  "E117",   # ruff format
  "E203",   # ruff format
  "D206",   # ruff format
  "D212",   # ruff format
  "D300",   # ruff format
  "Q",      # ruff format
  "COM812", # ruff format
  "COM819", # ruff format
  "ISC001", # ruff format
  "ISC002", # ruff format
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
line-ending = "lf"
indent-style = "space"
skip-magic-trailing-comma = false
