[tool.poetry]
name = "Python Youtube Downloader"
version = "2.0.0"
description = "An interactive command-line tool to batch download with yt-dlp"
authors = ["AlexBlandin"]

[tool.poetry.dependencies]
python = "^3.10"
yt-dlp = "^2023.7.6"
langcodes = "^3.3.0"
tqdm = "^4.64.0"
pytomlpp = "^1.0.10"
humanize = "^4.0.0"
mutagen = "^1.45.1"
beautifulsoup4 = "^4.11.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.2"
yapf = "^0.32.0"
pylint = "^3.0.0"
# isort = "^5.12.0" # deprecated, ruff has (mostly) replaced these
# pyupgrade = "^3.15.0" # deprecated, ruff has (mostly) replaced these

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
select = ["E", "F"]
# ignore = ["E501"] # E501 (line length  violations)
unfixable = ["B", "SIM", "TRY", "RUF"]
line-length = 160
target-version = "py310"

[tool.ruff.lint] # they're being moved into here?
select = ["E", "F"]
# ignore = ["E501"] # E501 (line length  violations)
unfixable = ["B", "SIM", "TRY", "RUF"]
line-length = 160
target-version = "py310"

[tool.ruff.isort]
ensure_newline_before_comments = true
include_trailing_comma = true
lines_after_imports = 1
use_parentheses = true
comment_prefix = " #"
multi_line_output = 3
force_grid_wrap = 0
reverse_sort = true
length_sort = true
line_length = 160
from_first = true
indent = "  "

[tool.yapf]
based_on_style = "pep8"
indent_width = 2
continuation_indent_width = 2
column_limit = 160
blank_line_before_nested_class_or_def = false
blank_lines_around_top_level_definition = 1
coalesce_brackets = true
dedent_closing_brackets = true
indent_dictionary_value = true
indent_blank_lines = true
join_multiple_lines = false
space_between_ending_comma_and_closing_bracket = true
spaces_around_default_or_named_assign = true
spaces_before_comment = 1

[tool.isort]
ensure_newline_before_comments = true
include_trailing_comma = true
lines_after_imports = 1
use_parentheses = true
comment_prefix = " #"
multi_line_output = 3
force_grid_wrap = 0
reverse_sort = true
length_sort = true
line_length = 160
from_first = true
indent = "  "
